parser_latino.output
Grammar

    0 $accept: axioma $end

    1 axioma: /* empty */
    2       | axioma asignacion salto

    3 salto: '\n'
    4      | /* empty */

    5 asignacion: IDENTIFICADOR IGUAL expresion

    6 array: CORCHETEABIERTO array2 CORCHETECERRADO
    7      | CORCHETEABIERTO CORCHETECERRADO

    8 array2: expresion SEPARADOR array2
    9       | expresion

   10 expresion: valor
   11          | array
   12          | expresion operador valor

   13 operador: SUMA
   14         | RESTA
   15         | MULTI
   16         | DIVISION

   17 valor: NUMERICO
   18      | NUMERICODECIMAL
   19      | CADENA
   20      | BOOL
   21      | IDENTIFICADOR


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3
error (256)
NUMERICO (258) 17
NUMERICODECIMAL (259) 18
IDENTIFICADOR (260) 5 21
CADENA (261) 19
BOOL (262) 20
SUMA (263) 13
RESTA (264) 14
MULTI (265) 15
DIVISION (266) 16
CORCHETEABIERTO (267) 6 7
CORCHETECERRADO (268) 6 7
SEPARADOR (269) 8
IGUAL (270) 5


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
axioma (18)
    on left: 1 2, on right: 0 2
salto (19)
    on left: 3 4, on right: 2
asignacion (20)
    on left: 5, on right: 2
array (21)
    on left: 6 7, on right: 11
array2 (22)
    on left: 8 9, on right: 6 8
expresion (23)
    on left: 10 11 12, on right: 5 8 9 12
operador (24)
    on left: 13 14 15 16, on right: 12
valor (25)
    on left: 17 18 19 20 21, on right: 10 12


state 0

    0 $accept: . axioma $end

    $default  reduce using rule 1 (axioma)

    axioma  go to state 1


state 1

    0 $accept: axioma . $end
    2 axioma: axioma . asignacion salto

    $end           shift, and go to state 2
    IDENTIFICADOR  shift, and go to state 3

    asignacion  go to state 4


state 2

    0 $accept: axioma $end .

    $default  accept


state 3

    5 asignacion: IDENTIFICADOR . IGUAL expresion

    IGUAL  shift, and go to state 5


state 4

    2 axioma: axioma asignacion . salto

    '\n'  shift, and go to state 6

    $default  reduce using rule 4 (salto)

    salto  go to state 7


state 5

    5 asignacion: IDENTIFICADOR IGUAL . expresion

    NUMERICO         shift, and go to state 8
    NUMERICODECIMAL  shift, and go to state 9
    IDENTIFICADOR    shift, and go to state 10
    CADENA           shift, and go to state 11
    BOOL             shift, and go to state 12
    CORCHETEABIERTO  shift, and go to state 13

    array      go to state 14
    expresion  go to state 15
    valor      go to state 16


state 6

    3 salto: '\n' .

    $default  reduce using rule 3 (salto)


state 7

    2 axioma: axioma asignacion salto .

    $default  reduce using rule 2 (axioma)


state 8

   17 valor: NUMERICO .

    $default  reduce using rule 17 (valor)


state 9

   18 valor: NUMERICODECIMAL .

    $default  reduce using rule 18 (valor)


state 10

   21 valor: IDENTIFICADOR .

    $default  reduce using rule 21 (valor)


state 11

   19 valor: CADENA .

    $default  reduce using rule 19 (valor)


state 12

   20 valor: BOOL .

    $default  reduce using rule 20 (valor)


state 13

    6 array: CORCHETEABIERTO . array2 CORCHETECERRADO
    7      | CORCHETEABIERTO . CORCHETECERRADO

    NUMERICO         shift, and go to state 8
    NUMERICODECIMAL  shift, and go to state 9
    IDENTIFICADOR    shift, and go to state 10
    CADENA           shift, and go to state 11
    BOOL             shift, and go to state 12
    CORCHETEABIERTO  shift, and go to state 13
    CORCHETECERRADO  shift, and go to state 17

    array      go to state 14
    array2     go to state 18
    expresion  go to state 19
    valor      go to state 16


state 14

   11 expresion: array .

    $default  reduce using rule 11 (expresion)


state 15

    5 asignacion: IDENTIFICADOR IGUAL expresion .
   12 expresion: expresion . operador valor

    SUMA      shift, and go to state 20
    RESTA     shift, and go to state 21
    MULTI     shift, and go to state 22
    DIVISION  shift, and go to state 23

    $default  reduce using rule 5 (asignacion)

    operador  go to state 24


state 16

   10 expresion: valor .

    $default  reduce using rule 10 (expresion)


state 17

    7 array: CORCHETEABIERTO CORCHETECERRADO .

    $default  reduce using rule 7 (array)


state 18

    6 array: CORCHETEABIERTO array2 . CORCHETECERRADO

    CORCHETECERRADO  shift, and go to state 25


state 19

    8 array2: expresion . SEPARADOR array2
    9       | expresion .
   12 expresion: expresion . operador valor

    SUMA       shift, and go to state 20
    RESTA      shift, and go to state 21
    MULTI      shift, and go to state 22
    DIVISION   shift, and go to state 23
    SEPARADOR  shift, and go to state 26

    $default  reduce using rule 9 (array2)

    operador  go to state 24


state 20

   13 operador: SUMA .

    $default  reduce using rule 13 (operador)


state 21

   14 operador: RESTA .

    $default  reduce using rule 14 (operador)


state 22

   15 operador: MULTI .

    $default  reduce using rule 15 (operador)


state 23

   16 operador: DIVISION .

    $default  reduce using rule 16 (operador)


state 24

   12 expresion: expresion operador . valor

    NUMERICO         shift, and go to state 8
    NUMERICODECIMAL  shift, and go to state 9
    IDENTIFICADOR    shift, and go to state 10
    CADENA           shift, and go to state 11
    BOOL             shift, and go to state 12

    valor  go to state 27


state 25

    6 array: CORCHETEABIERTO array2 CORCHETECERRADO .

    $default  reduce using rule 6 (array)


state 26

    8 array2: expresion SEPARADOR . array2

    NUMERICO         shift, and go to state 8
    NUMERICODECIMAL  shift, and go to state 9
    IDENTIFICADOR    shift, and go to state 10
    CADENA           shift, and go to state 11
    BOOL             shift, and go to state 12
    CORCHETEABIERTO  shift, and go to state 13

    array      go to state 14
    array2     go to state 28
    expresion  go to state 19
    valor      go to state 16


state 27

   12 expresion: expresion operador valor .

    $default  reduce using rule 12 (expresion)


state 28

    8 array2: expresion SEPARADOR array2 .

    $default  reduce using rule 8 (array2)
